Ensure the image can't get too large

--- a/assets/scss/components/content.scss
+++ b/assets/scss/components/content.scss
@@ -44,6 +44,7 @@
         .wp-post-image {
           display: block;
           margin: 0 auto 2rem auto;
+          width: 100%;
         }
 
         p,
